<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright © 2017 Sven Ruppert (sven.ruppert@gmail.com)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>


  <parent>
    <groupId>org.rapidpm</groupId>
    <artifactId>rapidpm-dependencies</artifactId>
    <version>4.0.1</version>
  </parent>

  <artifactId>rapidpm-vaadin-testbench-ng</artifactId>
  <packaging>pom</packaging>
  <version>0.3.0-SNAPSHOT</version>


  <inceptionYear>2017</inceptionYear>
  <organization>
    <name>RapidPM - Vaadin Developer</name>
    <url>https://github.com/vaadin-developer</url>
  </organization>
  <modules>
    <module>bom</module>
    <module>modules</module>
    <module>tests</module>
  </modules>

  <url>https://github.com/vaadin-developer/vaadin-addons.git</url>
  <name>RapidPM Vaadin Testbench Platform</name>
  <!--<description></description>-->
  <scm>
    <url>https://github.com/vaadin-developer/vaadin-addons</url>
    <connection>scm:git:https://github.com/vaadin-developer/vaadin-addons.git</connection>
    <developerConnection>scm:git:https://github.com/vaadin-developer/vaadin-addons.git</developerConnection>
    <tag>HEAD</tag>
  </scm>
  <developers>
    <developer>
      <name>Sven Ruppert</name>
      <email>sven.ruppert@gmail.com</email>
      <roles>
        <role>Developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>
  <issueManagement>
    <system>Github</system>
    <url>https://github.com/vaadin-developer/vaadin-addons/issues</url>
  </issueManagement>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <properties>
    <maven.compiler.target>10</maven.compiler.target>
    <maven.compiler.source>10</maven.compiler.source>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <webdriverextensions-maven-plugin.version>3.1.3</webdriverextensions-maven-plugin.version>


    <vaadin-v08.version>8.5.0</vaadin-v08.version>
    <vaadin-testbench-v08.version>5.1.2</vaadin-testbench-v08.version>

    <vaadin-v10.version>10.0.1</vaadin-v10.version>
    <vaadin-testbench-v10.version>6.0.0</vaadin-testbench-v10.version>



    <!--Change this one in BOM´s too!!!!-->
    <rapidpm-dependencies.version>4.0.1</rapidpm-dependencies.version>
    <rapidpm-functional-reactive.version>0.7.0</rapidpm-functional-reactive.version>
    <rapidpm-microservice.version>1.1.0</rapidpm-microservice.version>

    <!--Nano container-->
    <nano-vaadin-v08.version>0.2.0</nano-vaadin-v08.version>
    <nano-vaadin-v10.version>0.1.0</nano-vaadin-v10.version>

    <!--Initializer-->
    <meecrowave.version>1.2.3</meecrowave.version>
    <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
    <spring-boot2.version>2.0.3.RELEASE</spring-boot2.version>
    <addon-test-helpers.version>2.0</addon-test-helpers.version>
  </properties>

  <repositories>
    <repository>
      <id>vaadin-addons</id>
      <url>http://maven.vaadin.com/vaadin-addons</url>
      <!--<url>http://maven.vaadin.com/</url>-->
    </repository>
  </repositories>

  <dependencies>

  </dependencies>


  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.github.webdriverextensions</groupId>
          <artifactId>webdriverextensions-maven-plugin</artifactId>
          <version>${webdriverextensions-maven-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <!--<goal>jar</goal> do not define it here again !!-->
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <reuseForks>false</reuseForks>
          <threadCount>4</threadCount>
          <argLine>-Xms512m -Xmx512m</argLine>
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <properties>
            <!-- <includeTags>fast</includeTags> -->
            <excludeTags>slow</excludeTags>
          </properties>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-surefire-provider</artifactId>
            <version>${junit.platform.version}</version>
          </dependency>
          <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>ci</id>
      <distributionManagement>
        <repository>
          <id>sys-nexus-ci-release</id>
          <name>nexus-ci-release</name>
          <url>${env.MAVEN_REPO_URL}/libs-release-local</url>
        </repository>
        <snapshotRepository>
          <id>sys-nexus-ci-snapshot</id>
          <name>nexus-ci-snapshot</name>
          <url>${env.MAVEN_REPO_URL}/libs-snapshot-local</url>
        </snapshotRepository>
      </distributionManagement>
    </profile>

  </profiles>
</project>
